hphp/hack/test/typecheck/unsafe_cast/arity_error.php.exp
File "arity_error.php", line 4, characters 10-35:
This cast violates type safety and may lead to unexpected behavior at runtime. (Typing[4417])
File "arity_error.php", line 4, characters 10-35:
Too few arguments (required 1 but got 0) (Typing[4104])
  File "soundness.hhi", line 6, characters 10-20:
  Definition is here
File "arity_error.php", line 8, characters 10-42:
This cast violates type safety and may lead to unexpected behavior at runtime. (Typing[4417])
File "arity_error.php", line 8, characters 10-42:
Too many arguments (expected 1 but got 2) (Typing[4105])
  File "soundness.hhi", line 6, characters 10-20:
  Definition is here
